Use a list of environment variables for JVM options.
(cherry picked from commit b1b4eeb6a3b06fac7a5ca797b8e532401701fde8)